<resources>
    <string name="app_name">Peacock</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="compute">Compute</string>
    <string name="reset">Reset</string>
    <string name="peacock">Peacock</string>
    <string name="renton">Renton scale</string>
    <string name="enter_score">Score</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="points">Attacker score</string>
    <string name="aubout">One at the end</string>
    <string name="contract">Contract</string>
    <string name="oudlers">Oudlers</string>
    <string name="attack_handful">Attack handful</string>
    <string name="defense_handful">Defense handful</string>
    <string name="slam">Slam</string>
    <string name="unannounced">Unnannounced</string>
    <string name="no">No</string>
    <string name="announced">Announced</string>
    <string name="failed">Failed</string>
    <string name="simple">Simple</string>
    <string name="_double">Double</string>
    <string name="triple">Triple</string>
    <string name="small">Small</string>
    <string name="guard">Guard</string>
    <string name="guardw">Guard W.</string>
    <string name="guarda">Guard A.</string>
    <string name="lost">Lost</string>
    <string name="kept">Kept</string>
</resources>
