<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scores"
            android:icon="@drawable/scoreslogo"
            android:title="@string/enter_score" />
        <item
            android:id="@+id/nav_renton"
            android:icon="@drawable/doglogo"
            android:title="@string/renton" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/leaderboardlogo"
            android:title="@string/leaderboard" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

</menu>
